--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="birthday-wrapper">
         <h1 class="birthday-heading">
             Slide Into
-            <span class="birthday-heading__name">Kiah's 12th</span> Birthday Party
+            <span class="birthday-heading__name">XXXX 12th</span> Birthday Party
         </h1>
     </section>
     <section class="image-wrapper">
@@ -49,11 +49,11 @@
 
     <section class="info-wrapper">
         <div class="info-heading__wrapper">
-            <h1 class="info-heading"> Kiah's Party Saturday May 20th 1PM - 4PM (or later)</h1>
+            <h1 class="info-heading"> XXXX Party Saturday May 20th 1PM - 4PM (or later)</h1>
         </div>
         <div class="info-preheading__wrapper">
-            <h1 class="info-preheading">Call or Text Amanda Clark (Kiah's Mom) To RSVP at:</h1>
-            <h2 class="info-preheading__number">(217) 799-6645</h2>
+            <h1 class="info-preheading">Call or Text XXXXXXX (XXXX Mom) To RSVP at:</h1>
+            <h2 class="info-preheading__number">(000) 000-0000</h2>
         </div>
         <div class="info-message__wrapper">
             <h1 class="info-message">(Swimsuits will be needed)</h1>
